remove comments from Bencoder.java